--- a/webgl/threedotjs-cookbook/index.html
+++ b/webgl/threedotjs-cookbook/index.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Webpack-Babel Starters Kit</title>
-    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-   
-    <!-- <div id="barchart-1"></div> -->
-    <svg id="example-1"></svg>
-  
+  <div id="app"></div>
 </body>
 </html>
